--- a/defaultstyle.css
+++ b/defaultstyle.css
@@ -59,7 +59,7 @@ button {
     cursor: pointer;
     box-shadow: 0 .2rem 1rem rgba(0, 0, 0, 0.2);
     transition: all 0.3s ease;
-    height: auto;
+    height: 100%;
 
 }
 
