--- a/defaultstyle.css
+++ b/defaultstyle.css
@@ -45,6 +45,7 @@ nav {
 
 form {
     margin: 0;
+    width: 100%;
 }
 
 button {
@@ -54,7 +55,7 @@ button {
     padding: 1rem 1rem;
     text-align: center;
     text-decoration: none;
-    font-size: 1.5rem;
+    font-size: 1rem;
     font-family: 'Courier New', Courier, monospace;
     cursor: pointer;
     box-shadow: 0 .2rem 1rem rgba(0, 0, 0, 0.2);
