--- a/defaultstyle.css
+++ b/defaultstyle.css
@@ -58,7 +58,7 @@ button {
     padding-bottom: 1rem;
     text-align: center;
     text-decoration: none;
-    font-size: 1.5rem;
+    font-size: clamp(1rem, 3vw, 1.5rem);
     font-family: 'Courier New', Courier, monospace;
     cursor: pointer;
     box-shadow: 0 .2rem 1rem rgba(0, 0, 0, 0.2);
